# cli-executor

./: .gitignore  CMakeLists.txt  LanguageSubset.md  README.md
cli-example/: CMakeLists.txt
cli-example/src/: main.cpp
cli-example/src/commands/: Commands.cppm  Version.cppm
cli-preprocessor/: CMakeLists.txt
cli-preprocessor/src/: CliActionsContainer.cppm  CliCommandExecutor.cppm  CliCommandParameters.cppm  CliPreprocessor.cppm
cli-preprocessor/tests/: CMakeLists.txt  CliCommandExecutorTests.cpp
